# dead-man-switch

./: .dockerignore  .gitignore  .typos.toml  Cargo.toml  Dockerfile  Dockerfile-cli  Dockerfile-web  LICENSE  README.md  SECURITY.md  build.nix  clippy.toml  config.example.toml  docker-compose.example.yml  flake.nix  zizmor.yml
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  cli.yml  cron-zizmor.yml  docker-publish.yml  docker.yml  nix.yml  release.yml  security.yml  update_flake_lock.yml  zizmor.yml
crates/dead-man-switch/: Cargo.toml
crates/dead-man-switch-tui/: Cargo.toml
crates/dead-man-switch-tui/src/: main.rs
crates/dead-man-switch-web/: Cargo.toml
crates/dead-man-switch-web/src/: main.rs
crates/dead-man-switch-web/templates/: dashboard.html  login.html
crates/dead-man-switch/src/: app.rs  config.rs  email.rs  error.rs  lib.rs  timer.rs  tor.rs
dead-man-config/: Cargo.toml
dead-man-config/src/: lib.rs
dead-man-email/: Cargo.toml
dead-man-email/src/: lib.rs
dead-man-switch/: Cargo.toml
dead-man-switch/src/: main.rs
dead-man-timers/: Cargo.toml
dead-man-timers/src/: lib.rs
dead-man-tui/: Cargo.toml
dead-man-tui/src/: lib.rs
docker/: entrypoint-cli.sh  entrypoint-user-setup.sh  entrypoint-web.sh
docker/cli/: Dockerfile  README.md
docker/s6-overlay/_common/root/etc/s6-overlay/s6-rc.d/init-adduser/: branding
docker/s6-overlay/_common/root/etc/s6-overlay/s6-rc.d/svc-app/: up
docker/s6-overlay/_overrides/root/etc/s6-overlay/s6-rc.d/init-custom-files/: run
docker/s6-overlay/_overrides/root/etc/s6-overlay/s6-rc.d/non-root-check/: run  up
docker/s6-overlay/_overrides/root/etc/s6-overlay/s6-rc.d/terminal-check-interactive/: run  up
docker/s6-overlay/_overrides/root/etc/s6-overlay/s6-rc.d/terminal-check-non-interactive/: run  up
docker/s6-overlay/cli/root/etc/s6-overlay/s6-rc.d/init-adduser/: run
docker/s6-overlay/cli/root/etc/s6-overlay/s6-rc.d/svc-app/: run
docker/s6-overlay/web/root/etc/s6-overlay/s6-rc.d/init-adduser/: run
docker/s6-overlay/web/root/etc/s6-overlay/s6-rc.d/svc-app/: finish  run
docker/web/: Dockerfile  README.md
src/: cli.rs  config.rs  email.rs  lib.rs  main.rs  timer.rs  tui.rs
