[workspace]
members = [
    "dead-man-switch",
    "dead-man-config",
    "dead-man-timers",
    "dead-man-email",
    "dead-man-tui",
]
default-members = ["dead-man-switch"]

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
