[workspace]
resolver = "2"
members = [
    "crates/dead-man-switch",
    "crates/dead-man-switch-tui",
    "crates/dead-man-switch-web",
]
default-members = ["crates/dead-man-switch", "crates/dead-man-switch-tui"]

[workspace.package]
edition = "2021"
version = "0.4.0"
authors = ["Jose Storopoli <jose@storopoli.io>"]
description = "A simple no-BS Dead Man's Switch"
license = "AGPL-3.0-only"
readme = "README.md"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
