[workspace]
resolver = "2"
members = [
  "crates/dead-man-switch",
  "crates/dead-man-switch-tui",
  "crates/dead-man-switch-web",
]
default-members = ["crates/dead-man-switch", "crates/dead-man-switch-tui"]

[workspace.package]
edition = "2024"
version = "0.9.2"
authors = ["Jose Storopoli <jose@storopoli.com>"]
description = "A simple no-BS Dead Man's Switch"
license = "AGPL-3.0-only"
readme = "README.md"

[workspace.dependencies]
dead-man-switch = { path = "crates/dead-man-switch", version = "0.9.2" }

chrono = "0.4.42"
zeroize = { version = "1.8.2", features = ["derive"] }

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
