[package]
name = "dead-man-switch-tui"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch Tui Interface"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
dead-man-switch.workspace = true

thiserror = "2.0.9"
ratatui = "0.29.0"
crossterm = "0.28.1"
