[package]
name = "dead-man-switch-tui"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch Tui Interface"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
dead-man-switch.workspace = true

thiserror = "2.0.18"
ratatui = "0.30.0"
ratatui-crossterm = "0.1.0"
