[package]
name = "dead-man-switch-web"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch Web Interface"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
dead-man-switch.workspace = true

zeroize.workspace = true

anyhow = "1.0.98"
askama = "0.14.0"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.5", features = ["tracing", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Auth handling
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-private"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Rate limiting
tower = { version = "0.5.2", features = ["buffer", "limit"] }
