[package]
name = "dead-man-switch-web"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch Web Interface"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
dead-man-switch.workspace = true

zeroize.workspace = true

anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.7", features = ["tracing", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Auth handling
axum-extra = { version = "0.12.1", features = ["cookie", "cookie-private"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Rate limiting
tower = { version = "0.5.2", features = ["buffer", "limit"] }
