[package]
name = "dead-man-switch-web"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch Web Interface"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
# Inherits the base crate's default features, which include `tor`.
dead-man-switch.workspace = true

zeroize.workspace = true

anyhow = "1.0.102"
askama = "0.16.0"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.11", features = ["tracing", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Serving the axum router over Tor onion-service streams.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "service", "tokio"] }
futures = "0.3"

# Auth handling
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
bcrypt = "0.19.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Rate limiting (and `util` for adapting the router into a hyper service)
tower = { version = "0.5.3", features = ["buffer", "limit", "util"] }
