[package]
name = "dead-man-switch"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"
directories-next = "2.0.0"
lettre = { version = "0.11.18", features = ["rustls-tls", "builder"] }
mime_guess = "2.0.5"
chrono.workspace = true
zeroize.workspace = true
