[package]
name = "dead-man-switch"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.19"
directories-next = "2.0.0"
lettre = { version = "0.11.18", features = ["rustls-tls", "builder"] }
mime_guess = "2.0.5"
chrono.workspace = true
zeroize.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
tracing = "0.1.44"
