[package]
name = "dead-man-switch"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "A simple no-BS Dead Man's Switch"
license = "AGPL-3.0-only"
readme = "../../README.md"

[features]
# Tor support is enabled by default. Downstream crates that want a minimal
# build (e.g. the TUI) can opt out with `default-features = false`.
default = ["tor"]
# Routes the web UI (inbound onion service) and the notification emails
# (outbound SMTP) through the Tor network using arti.
tor = [
  "dep:tokio",
  "dep:futures",
  "dep:arti-client",
  "dep:tor-rtcompat",
  "dep:tor-hsservice",
  "dep:tor-cell",
  "dep:tor-proto",
  "dep:safelog",
  # Async lettre surface (`connect_with_transport`); uses the ring rustls
  # provider, matching the existing sync `rustls-tls` feature.
  "lettre/tokio1-rustls-tls",
]

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
directories-next = "2.0.0"
# Default features disabled so `native-tls` is never pulled in: this keeps the
# only TLS provider as rustls/ring, which the async Tor SMTP path also uses
# (otherwise enabling lettre's `tokio1` alongside the default `native-tls`
# triggers lettre's `tokio1-native-tls` compile guard).
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "rustls-tls"] }
mime_guess = "2.0.5"
chrono.workspace = true
zeroize.workspace = true
uuid = { version = "1.23.1", features = ["v4"] }
tracing = "0.1.44"

# Tor (optional, behind the `tor` feature). arti stays on its default
# `native-tls` stack so the only rustls provider in the tree is lettre's ring.
tokio = { version = "1.50.0", features = ["rt-multi-thread", "io-util"], optional = true }
futures = { version = "0.3", optional = true }
arti-client = { version = "0.43.0", default-features = false, features = ["tokio", "native-tls", "onion-service-service"], optional = true }
tor-rtcompat = { version = "0.43.0", optional = true }
tor-hsservice = { version = "0.43.0", optional = true }
tor-cell = { version = "0.43.0", optional = true }
tor-proto = { version = "0.43.0", features = ["hs-service", "tokio"], optional = true }
safelog = { version = "0.8.2", optional = true }
